--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "yeoman-generator": "^0.23.0",
+    "underscore.string": "^3.3.4",
     "chalk": "^1.0.0",
     "yosay": "^1.0.0"
   },
